--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 id="dala">welcome to luanda kotieno</h1>
+    <img src="./images/vegetation.jpg" alt="a photo of the luanda view" title="Welcome home">
     <p>luanda Kotieno is a centere located in south uyoma ward in Siaya county<br/>Luanda kotieno was named after the great OTIENO of siamba B village <br/>
         There are severall aconomic activities practiced as the main is <strong>fishing</strong>as people of luanda kotieno live along the <b>lake victoria kenya</b>
         other activities are 
